implement method "public UserDto fromBusiness(User source)"